--- a/Kelompok3session5.html
+++ b/Kelompok3session5.html
@@ -119,95 +119,170 @@
                 <th width="950"><center>Soal</center></th>
 
               </tr>
-            
+
 
               <tr>
                 <th><center>211</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Pada siang hari aku dapat tidur, tetapi pada malam hari tidak</th>
 
               </tr>
               <tr>
                 <th><center>212</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Keluargaku lebih memperlakukan aku sebagai kanak-kanak daripada sebagai orang dewasa</th>
 
               </tr>
               <tr>
                 <th><center>213</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Waktu berjalan aku sangat berhati-hati agar tidak salah injak</th>
 
               </tr>
               <tr>
                 <th><center>214</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku tidak pernah cemas karena kelainan kulit</th>
 
               </tr>
               <tr>
                 <th><center>215</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku minum-minuman keras berlebihan</th>
 
               </tr>
               <tr>
                 <th><center>216</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Dibandingkan dengan keluarga lain, kasih sayang dan keakraban dalam keluargaku sangat kurang</th>
 
               </tr>
               <tr>
                 <th><center>217</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Ternyata aku sering merisaukan sesuatu</th>
 
               </tr>
               <tr>
                 <th><center>218</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku merasa tidak terganggu melihat binatang yang menderita</th>
 
               </tr>
               <tr>
                 <th><center>219</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku senang pekerjaan seorang pemborong bangunan</th>
 
               </tr>
               <tr>
                 <th><center>220</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku sayang pada ibuku</th>
 
               </tr>
               <tr>
                 <th><center>221</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku suka pada ilmu pengetahuan</th>
 
               </tr>
               <tr>
                 <th><center>222</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Mudah bagiku untuk minta pertolongan dari kawan-kawannya, walaupun aku tidak dapat membalasnya</th>
 
               </tr>
               <tr>
                 <th><center>223</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku gemar sekali berburu</th>
 
               </tr>
               <tr>
                 <th><center>224</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Orang tuaku sering tidak setuju terhadap teman-teman yang kupilih</th>
 
               </tr>
               <tr>
                 <th><center>225</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku ingin juga menjadi wartawan</th>
 
               </tr>
