--- a/Kelompok1session2.html
+++ b/Kelompok1session2.html
@@ -121,77 +121,152 @@
               </tr>
               <tr>
                 <th><center>16</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku merasa hidup ini tidak adil</th>
               </tr>
               <tr>
                 <th><center>17</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Ayahku seorang yang baik</th>
               </tr>
               <tr>
                 <th><center>18</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku jarang sekali terganggu sembelit(kesukaran buang air besar)</th>
               </tr>
               <tr>
                 <th><center>19</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Bilamana aku melamar pekerjaan baru, aku ingin tahu siapa yang yang harus aku hubungi lebih dulu</th>
               </tr>
               <tr>
                 <th><center>20</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Kehidupan Seks-ku  cukup memuaskan</th>
               </tr>
               <tr>
                 <th><center>21</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku pernah ingin sekali lari dari rumah</th>
               </tr>
               <tr>
                 <th><center>22</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>pada waktu-waktu tertentu alu tertawa dan menangis tanpa dapat kukuasai</th>
               </tr>
               <tr>
                 <th><center>23</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku terganggu oleh serangan rasa mual dan muntah-muntah</th>
               </tr>
               <tr>
                 <th><center>24</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku merasa tak seorangpun yang mengerti akan diriku</th>
               </tr>
               <tr>
                 <th><center>25</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>aku ingin menjadi penyanyi</th>
               </tr>
               <tr>
                 <th><center>26</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku rasa lebih baik tutup mulut bila dalam kesulitan</th>
               </tr>
               <tr>
                 <th><center>27</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Adakalanya aku dimasuki roh jahat</th>
               </tr>
               <tr>
                 <th><center>28</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Prinsikku adalah beruahan membalas orang yang yang buat salah kepadaku</th>
               </tr>
               <tr>
                 <th><center>29</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Dalam Seminggu aku beberapa kali terganggu oleh penyakit lambung(maag)</th>
               </tr>
               <tr>
                 <th><center>30</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Kadang - kadang aku merasa ingin mengumpat caci</th>
               </tr>
             </table>
