--- a/Kelompok1session4.html
+++ b/Kelompok1session4.html
@@ -121,77 +121,152 @@
               </tr>
               <tr>
                 <th><center>46</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Sekarang aku lebih mampu mengambil suatu keputusan dari pada dahulu</th>
               </tr>
               <tr>
                 <th><center>47</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Sekali atau lebih dalam seminggu aku tiba-tiba merasa panas tanpa sesuatu sebab yang jelas </th>
               </tr>
               <tr>
                 <th><center>48</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>pada waktu bersama orang-orang aku merasa terganggu oleh suara-suara yang aneh</th>
               </tr>
               <tr>
                 <th><center>49</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Rasanya aku akan lebih baik apabila semua undang-undang ditiadakan</th>
               </tr>
               <tr>
                 <th><center>50</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Rohku kadang-kadang meninggalkan tubuhku</th>
               </tr>
               <tr>
                 <th><center>51</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Kesehatanku kurang lebih sama baiknya dengan kesehatan kawan-kawanku</th>
               </tr>
               <tr>
                 <th><center>52</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Bila Aku berpapasan dengan teman-teman sekolah atau kenalan lama,aku lebih suka menghindari mereka, kecuali bila mereka menegurku lebih dulu</th>
               </tr>
               <tr>
                 <th><center>53</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Seorang ulama(rohaniawan) dapat menyembuhkan dengan meletakan tangannya di dahi orang sakit dan berdoa</th>
               </tr>
               <tr>
                 <th><center>54</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku disuakai oleh kebanyakan orang yang mengenalku</th>
               </tr>
               <tr>
                 <th><center>55</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku hamir takpenah terganggu rasa nyeri pada jantung dan dada</th>
               </tr>
               <tr>
                 <th><center>56</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Selagi muda aku pernah dilarang masuk sekolah karena kebrandalanku</th>
               </tr>
               <tr>
                 <th><center>57</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku mudah Bergaul</th>
               </tr>
               <tr>
                 <th><center>58</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Segala sesuatu terjadi seperti yang diramalkan oleh Nabi - nabi</th>
               </tr>
               <tr>
                 <th><center>59</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku sering harus menerima perintah dari seseorang yang tidak lebih pandai dari pada aku</th>
               </tr>
               <tr>
                 <th><center>60</center></th>
-                <th><center><input type="checkbox" class="flat-red"></center></th>
+                <th><div class="checkbox">
+  <label>
+    <input type="checkbox" value="">
+    <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
+  </label>
+</div></th>
                 <th>Aku tidak membaca setiap tajuk rencana surat kabar harian</th>
               </tr>
             </table>
