--- a/Kelompok1session1.html
+++ b/Kelompok1session1.html
@@ -272,7 +272,25 @@
             </table>
           </div>
         </div>
+        <div class="form-group">
+          <div class="col-lg-12">
+            <div class="container ">
+              <div class="col-lg-9">
 
+
+
+              </div>
+              <div class="col-lg-3">
+
+                  <button type="button" class="btn  btn-primary fa fa-arrow-right fa-lg"> Next
+
+
+              </div>
+                <br>
+                  <br>
+          </div>
+          </div>
+        </div>
       </div>
 
     </div>
