--- a/Kelompok1session1.html
+++ b/Kelompok1session1.html
@@ -71,7 +71,7 @@
         </li>
           <li class="treeview">
             <a href="#" class="disable">
-              <span>Kelompok SoalL 2</span>
+              <span>Kelompok Soal 2</span>
             </a>
             <ul class="treeview-menu">
               <li><a href="#"><i class="fa fa-circle-o"></i>SUB 1</a></li>
@@ -237,7 +237,7 @@
                     <span class="cr"><i class="cr-icon glyphicon glyphicon-ok"></i></span>
                   </label>
                 </div></th>
-                <th>Aku senang cerita detektif dan certa seram</th>
+                <th>Aku senang cerita detektif dan cerita seram</th>
               </tr>
               <tr>
                 <th><center>13</center></th>
