--- a/Kelompok1session3.html
+++ b/Kelompok1session3.html
@@ -72,7 +72,7 @@
         </li>
           <li class="treeview">
             <a href="#" class="disable">
-              <span>Kelompok SoalL 2</span>
+              <span>Kelompok Soal 2</span>
             </a>
             <ul class="treeview-menu">
               <li><a href="#"><i class="fa fa-circle-o"></i>SUB 1</a></li>
